--- a/cover.css
+++ b/cover.css
@@ -17,8 +17,9 @@
  */
 
 body {
-  text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
-  box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
+
+  color: rgb(253, 248, 226);
+  font-family: "Cardo";
 }
 
 .cover-container {
@@ -29,6 +30,9 @@ body {
 /*
  * Header
  */
+header > div {
+  box-shadow: 1px 1px 15px 1px rgba(0,0,0,0.75);
+}
 
 .nav-masthead .nav-link {
   color: rgba(255, 255, 255, .5);
@@ -45,8 +49,8 @@ body {
 }
 
 .nav-masthead .active {
-  color: #fff;
-  border-bottom-color: #fff;
+  color: rgb(102, 106, 140);
+  border-bottom-color: rgb(102, 106, 140);
 }
 
 .logo {
@@ -54,6 +58,7 @@ body {
   font-weight: 400;
   font-style: normal;
   font-size: 2.5rem;
+  color: rgb(102, 106, 140);
 }
 
 #portrait-placeholder {
@@ -76,8 +81,14 @@ body {
 #name {
   font-family: "Cardo";
   letter-spacing: 3px;
+  color: rgb(97, 163, 193);
 }
 
 #name span {
   font-size: 1.5em;
+}
+
+html {
+  text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
+  box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
 }
