--- a/cover.css
+++ b/cover.css
@@ -17,7 +17,6 @@
  */
 
 body {
-
   color: rgb(253, 248, 226);
   font-family: "Cardo";
 }
@@ -64,7 +63,7 @@ header > div {
 #portrait-placeholder {
   width: 200px;
   height: 200px;
-  background-color: azure;
+  box-shadow: 0px 10px 15px -3px rgba(0,0,0,0.1);
 }
 
 main {
@@ -78,17 +77,21 @@ body {
     linear-gradient(to bottom, rgb(45, 44, 44) 0.5px, transparent 1px);
 }
 
-#name {
-  font-family: "Cardo";
+#name.title {
   letter-spacing: 3px;
   color: rgb(97, 163, 193);
 }
 
-#name span {
-  font-size: 1.5em;
+.title {
+  font-family: "Cardo";
+  color: rgb(102, 106, 140);
 }
 
 html {
   text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
   box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
+}
+
+.title span {
+  font-size: 1.5em;
 }
