--- a/cover.css
+++ b/cover.css
@@ -38,19 +38,23 @@ header > div {
   border-bottom: .25rem solid transparent;
 }
 
-.nav-masthead .nav-link:hover,
-.nav-masthead .nav-link:focus {
+.nav-masthead .nav-link:hover {
   border-bottom-color: rgba(255, 255, 255, .25);
+}
+
+.nav-masthead .nav-link:focus {
+  color: rgb(102, 106, 140);
+  border-bottom-color: rgb(102, 106, 140);
 }
 
 .nav-masthead .nav-link + .nav-link {
   margin-left: 1rem;
 }
 
-.nav-masthead .active {
+/* .nav-masthead .active {
   color: rgb(102, 106, 140);
   border-bottom-color: rgb(102, 106, 140);
-}
+} */
 
 .logo {
   font-family: "Alex Brush", cursive;
