--- a/cover.css
+++ b/cover.css
@@ -74,7 +74,7 @@ header > div {
 #portrait-placeholder {
   width: 200px;
   height: 200px;
-  box-shadow: 0px 10px 15px -3px rgba(0,0,0,0.1);
+  box-shadow: 1px 1px 15px 1px rgba(0,0,0,0.75);
 }
 
 main {
@@ -115,4 +115,9 @@ html {
 a[href^="mailto:"], a[href^="tel:"] {
   text-decoration: none;
   color: rgb(253, 248, 226) !important;
+}
+
+.icons-container {
+  box-shadow: 1px 1px 15px 1px rgba(0,0,0,0.75);
+  border-radius: 24px;
 }
