--- a/cover.css
+++ b/cover.css
@@ -103,6 +103,10 @@ body {
   scroll-margin-top: 106px;
 }
 
+div#home {
+  scroll-margin-top: 106px;
+}
+
 html {
   text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
   box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
